--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "pydantic[email] (>=2.11.7,<3.0.0)",
     "werkzeug (>=3.1.3,<4.0.0)",
     "requests (>=2.32.4,<3.0.0)",
-    "python-dotenv (>=1.1.1,<2.0.0)"
+    "python-dotenv (>=1.1.1,<2.0.0)",
+    "alembic (>=1.16.4,<2.0.0)"
 ]
 
 
