--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     region: oregon
     pythonVersion: 3.12.13
-    buildCommand: "pip install -r requirements.txt"
+    buildCommand: poetry install --no-root
     startCommand: "uvicorn main_backend:app --host 0.0.0.0 --port $PORT"
     envVars:
       - key: DATABASE_URL
