--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -8,7 +8,7 @@ services:
     startCommand: "uvicorn main_backend:app --host 0.0.0.0 --port $PORT"
     envVars:
       - key: DATABASE_URL
-        value: postgresql://postgres:Mac@supabase1@db.omcidfuqjfciohudjujd.supabase.co:5432/postgres
+        value: postgresql://postgres:Mac%40supabase1@db.omcidfuqjfciohudjujd.supabase.co:5432/postgres
       - key: SECRET_KEY
         value: your_default_secret_key
       # Add other environment variables here as needed
