--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:your_password@your_host:5432/postgres
-SECRET_KEY=your_secret_key
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASSWORD=your_email_password
+DATABASE_URL=postgresql://postgres:Mac%40supabase1@db.omcidfuqjfciohudjujd.supabase.co:5432/postgres
+SECRET_KEY=your_default_secret_key
+EMAIL_USER=medicallabresults@gmail.com
+EMAIL_PASSWORD=MedicalLab%40results1
