--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:Mac%40supabase1@db.omcidfuqjfciohudjujd.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres:mac_labdb1.@db.omcidfuqjfciohudjujd.supabase.co:5432/postgres
 SECRET_KEY=your_default_secret_key
 EMAIL_USER=medicallabresults@gmail.com
 EMAIL_PASSWORD=MedicalLab%40results1
