--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:mac_labdb123@db.omcidfuqjfciohudjujd.supabase.co:5432/postgres
+DATABASE_URL=postgresql://labdb_gq1x_user:XtErz71QMvZsv07LEj9PrL0hcNM9hkK6@dpg-d26b2d63jp1c73cseb50-a/labdb_gq1x
 SECRET_KEY=your_default_secret_key
 EMAIL_USER=medicallabresults@gmail.com
 EMAIL_PASSWORD=MedicalLab%40results1
