--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -8,7 +8,7 @@ services:
     startCommand: "uvicorn main_backend:app --host 0.0.0.0 --port $PORT"
     envVars:
       - key: DATABASE_URL
-        value: postgresql://postgres:mac_labdb123@db.omcidfuqjfciohudjujd.supabase.co:5432/postgres
+        value: postgresql://labdb_gq1x_user:XtErz71QMvZsv07LEj9PrL0hcNM9hkK6@dpg-d26b2d63jp1c73cseb50-a/labdb_gq1x
       - key: SECRET_KEY
         value: your_default_secret_key
       - key: EMAIL_USER
