--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,5 +9,5 @@ pydantic[email]>=2.11.7,<3.0.0
 requests>=2.32.4,<3.0.0
 python-dotenv>=1.1.1,<2.0.0
 werkzeug>=3.1.3,<4.0.0
-google-cloud-storage
+google-cloud-storage==2.16.0
 
