--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DATABASE_URL=postgresql://labdb_gq1x_user:XtErz71QMvZsv07LEj9PrL0hcNM9hkK6@dpg-d
 SECRET_KEY=your_default_secret_key
 EMAIL_USER=medicallabresults@gmail.com
 EMAIL_PASSWORD=MedicalLab%40results1
+GCS_CREDENTIALS=backend/gcs_creds.json
